tests/parse/error_mdspan1.co
// RUN: not choreo %s 2>&1 | FileCheck %s

__co__ auto illegal_mdspan() {
  mdspan it = [7, 8];  // must init with ":"
}

// CHECK: error: must use ':' to initialize a mdspan.
// CHECK-NOT: error:
